Sources/sdk/sccfi.h

#define FI_SHIFTJIS             4009
#define FI_TURKISH_WINDOWS                   4089  /* Turkish Text               Windows ANSI 1254             */
#define FI_VIETNAMESE_WINDOWS                4090  /* Vietnamese Text            Windows ANSI 1258             */
#define FI_WESTERNEUROPEAN_ISO               4091  /* Western European Text      ISO 8859-1                    */
#define FI_WESTERNEUROPEAN_MAC               4092  /* Western European Text      Mac                           */
#define FI_WESTERNEUROPEAN_WINDOWS           4093  /* Western European Text      Windows ANSI 1252             */
#define FI_HTML_ARABIC_ASMO708               4094  /* Arabic HTML                ASMO-708                      */
#define FI_HTML_ARABIC_DOS                   4095  /* Arabic HTML                DOS OEM 720 TRANSPARENT ASMO  */
#define FI_HTML_ARABIC_ISO                   4096  /* Arabic HTML                ISO 8859-6                    */
#define FI_HTML_ARABIC_MAC                   4097  /* Arabic HTML                Mac                           */
#define FI_HTML_ARABIC_WINDOWS               4098  /* Arabic HTML                Windows ANSI 1256             */
#define FI_HTML_BALTIC_ISO                   4099  /* Baltic HTML                ISO 8859-4                    */
#define FI_HTML_BALTIC_WINDOWS               4100  /* Baltic HTML                Windows ANSI 1257             */
#define FI_HTML_CENTRALEUROPEAN_DOS          4101  /* Central European HTML      DOS OEM 852 Latin II          */
#define FI_HTML_CENTRALEUROPEAN_ISO          4102  /* Central European HTML      ISO 8859-2                    */
#define FI_HTML_CENTRALEUROPEAN_MAC          4103  /* Central European HTML      Mac                           */
#define FI_HTML_CENTRALEUROPEAN_WINDOWS      4104  /* Central European HTML      Windows ANSI 1250             */
#define FI_HTML_CHINESESIMPLIFIED_EUC        4105  /* Chinese Simplified HTML    EUC                           */
#define FI_HTML_CHINESESIMPLIFIED_WINDOWS    4106  /* Chinese Simplified HTML    Windows ANSI 936 (GB2312)     */
#define FI_HTML_CHINESETRADITIONAL_WINDOWS   4107  /* Chinese Traditional HTML   Windows ANSI 950 (BIG5)       */
#define FI_HTML_CYRILLIC_DOS                 4108  /* Cyrillic HTML              DOS OEM 855                   */
#define FI_HTML_CYRILLIC_ISO                 4109  /* Cyrillic HTML              ISO 8859-5                    */
#define FI_HTML_CYRILLIC_KOI8R               4110  /* Cyrillic HTML              KOI8-R                        */
#define FI_HTML_CYRILLIC_MAC                 4111  /* Cyrillic HTML              Mac                           */
#define FI_HTML_CYRILLIC_WINDOWS             4112  /* Cyrillic HTML              Windows ANSI 1251             */
#define FI_HTML_GREEK_ISO                    4113  /* Greek HTML                 ISO 8859-7                    */
#define FI_HTML_GREEK_MAC                    4114  /* Greek HTML                 Mac                           */
#define FI_HTML_GREEK_WINDOWS                4115  /* Greek HTML                 Windows ANSI 1253             */
#define FI_HTML_HEBREW_DOS                   4116  /* Hebrew HTML                DOS OEM 862                   */
#define FI_HTML_HEBREW_ISO_VISUAL            4117  /* Hebrew HTML                ISO 8859-8                    */
#define FI_HTML_HEBREW_WINDOWS               4118  /* Hebrew HTML                Windows ANSI 1255             */
#define FI_HTML_JAPANESE_MAC                 4119  /* Japanese HTML              Mac                           */
#define FI_HTML_JAPANESE_SHIFTJIS            4120  /* Japanese HTML              Windows Shift-JIS ANSI 932    */
#define FI_HTML_KOREAN_JOHAB                 4121  /* Korean HTML                Windows ANSI 1361 (Johab)     */
#define FI_HTML_KOREAN_WINDOWS               4122  /* Korean HTML                Windows ANSI 949              */
#define FI_HTML_RUSSIAN_DOS                  4123  /* Russian HTML               DOS OEM 866                   */
#define FI_HTML_THAI_WINDOWS                 4124  /* Thai HTML                  Windows ANSI 874              */
#define FI_HTML_TURKISH_DOS                  4125  /* Turkish HTML               DOS OEM 857                   */
#define FI_HTML_TURKISH_ISO                  4126  /* Turkish HTML               ISO 8859-9                    */
#define FI_HTML_TURKISH_MAC                  4127  /* Turkish HTML               Mac                           */
#define FI_HTML_TURKISH_WINDOWS              4128  /* Turkish HTML               Windows ANSI 1254             */
#define FI_HTML_VIETNAMESE_WINDOWS           4129  /* Vietnamese HTML            Windows ANSI 1258             */
#define FI_HTML_WESTERNEUROPEAN_ISO          4130  /* Western European HTML      ISO 8859-1                    */
#define FI_HTML_WESTERNEUROPEAN_MAC          4131  /* Western European HTML      Mac                           */
#define FI_HTML_WESTERNEUROPEAN_WINDOWS      4132  /* Western European HTML      Windows ANSI 1252             */
#define FI_GENERICEND                        4132
#define FI_PLUGIN                            4750
/* for backwards compatibility  */
#define FI_JAPANESE_SHIFTJIS                 FI_SHIFTJIS
    /*
    |   Bitmap/Vector formats stored internally by applications
    */

#define FI_BITMAPBEGIN       5000
#define FI_BINARYMETAFILE    5000   /* Word for Windows internal metafile */
#define FI_WPFWPG            5001   /* WordPerfect internal WPG, no header */
#define FI_AMISNAPSHOT       5002   /* Ami internal snap shot */
#define FI_WORDSNAPSHOT      5003   /* Word internal snap shoot */
#define FI_BINARYMACPICT     5004   /* Macintosh PICT without 512 byte header */
#define FI_BINARYMETABMP     5005   /* Word for Windows internal metafile bitmap */
#define FI_BINARYMETAPICT    5006   /* Word for Windows 6 internal metafile  WITH metfilepict header */
#define FI_WPFWORKSEMBED     5007   /* PerfectWorks internal embedding */
#define FI_WPG2EMBED         5008   /* Bitmap embedded in a WPG2 file */
#define FI_WINDOWSDIB        5009   /* Bitmap w/o BITMAPFILEHEADER in WKS */
#define FI_WPG1EMBED         5010   /* Bitmap embedded in a WPG1 file */
#define FI_GDSFEMBED         5011   /* Bitmap embedded in another format handled by GDSF */
#define FI_WINBMPCOREINFO    5012   /* Bitmap embedded in Excel with just BITMAPCOREINFO as a header */
#define FI_IAFBWEMBED        5013   /* Black & White Bitmap embedded in Interleaf */
#define FI_IAFCOLOREMBED     5014   /* Color Bitmap embedded in Interleaf */
#define FI_PICTEMBED         5015   /* Bitmap embedded in a PICT file */
#define FI_BITMAPEND         5015
#define FI_OCRTEXT           5100   /* Export OCR data as Text, no formatting*/
#define FI_OCRRTF            5101   /* Export OCR data as RTF, yes formatting*/
#define FI_OCRHTML           5102   /* Export OCR data as HTML.*/
#define FI_IDEND             5102
#define FI_EDRM1             5200   /* EDRM export */
	/*
	|  OI Interface formats
	*/
#define FI_OIFACEBEGIN       6000
#define FI_OIACTIVECOMPONENT 6000   /* iface/OIActiveComponent.h */
#define FI_OIDOCUMENT        6001   /* iface/OIDocument.h */
#define FI_OIVECT            6002   /* iface/OIVect.h */
#define FI_OISIMPLEVECT      6003   /* iface/OISimpleVect.h */
#define FI_OIVECT3D          6004   /* iface/OIVect3D.h */
#define FI_OITEXT            6005   /* iface/OIText.h */
#define FI_OICHART           6006   /* iface/OIChart.h */
#define FI_OISMARTART        6007   /* iface/OISmartArt.h */
#define FI_OICHUNKERINFO     6008   /* iface/OIChunkerInfo.h */
#define FI_OIVECTORHOTSPOTS  6009   /* iface/OIVectorHotspots.h */
#define FI_OICHUNKER         6010   /* iface/OIChunker.h */
#define FI_OIFILTER          6011   /* iface/OIFilter.h */
#define FI_OIFACEEND         6009
typedef struct FIGETtag
{
    VTWORD wId;
} FIGET, * PFIGET;
#define  FIFLAG_NORMAL				0
#define  FIFLAG_EXTENDEDFI			1
#define  FIFLAG_OVERRIDEOPTIONS		2
FI_ENTRYSC VTWORD FI_ENTRYMOD FIIdFileEx(VTDWORD, VTVOID *, VTDWORD, VTWORD *,VTLPTSTR, VTWORD);
FI_ENTRYSC VTBOOL FI_ENTRYMOD FIGetFirstId(PFIGET, VTWORD *, VTLPTSTR, VTWORD);
FI_ENTRYSC VTBOOL FI_ENTRYMOD FIGetNextId(PFIGET, VTWORD *, VTLPTSTR, VTWORD);
FI_ENTRYSC VTWORD FI_ENTRYMOD FIGetIDString(VTWORD, VTLPTSTR, VTWORD);
FI_ENTRYSC VTWORD FI_ENTRYMOD FIIdSpecial(HIOFILE, VTWORD);
FI_ENTRYSC VTWORD FI_ENTRYMOD FIIdFile(VTDWORD,VTVOID *,VTDWORD,VTWORD *);
FI_ENTRYSC VTSHORT FI_ENTRYMOD FIIdHandle(HIOFILE, VTDWORD, VTWORD *);
FI_ENTRYSC VTLONG FI_ENTRYMOD FIThreadInit(VTSHORT ThreadOption);
FI_ENTRYSC VTLONG FI_ENTRYMOD FIThreadInitExt(VTLONG (*Lock)(VTVOID *), VTLONG (*Unlock)(VTVOID *));
FI_ENTRYSC VTDWORD FI_ENTRYMOD FIInit(VTVOID);
FI_ENTRYSC VTDWORD FI_ENTRYMOD FIDeInit(VTVOID);
/* defines for thread initialization.  Needed only for UNIX */
#define FITHREAD_INIT_PTHREADS  0
#define FITHREAD_INIT_NOTHREADS 1
#define FITHREAD_INIT_NATIVETHREADS 2
#define FITHREAD_INIT_SUCCESS 0
#define FITHREAD_INIT_FAILED  1
#define FITHREAD_INIT_ALREADY_CALLED 2