Sources/sccfi.pas

     FI_TURKISH_WINDOWS = 4089;     
  { Vietnamese Text            Windows ANSI 1258              }
     FI_VIETNAMESE_WINDOWS = 4090;     
  { Western European Text      ISO 8859-1                     }
     FI_WESTERNEUROPEAN_ISO = 4091;     
  { Western European Text      Mac                            }
     FI_WESTERNEUROPEAN_MAC = 4092;     
  { Western European Text      Windows ANSI 1252              }
     FI_WESTERNEUROPEAN_WINDOWS = 4093;     
  { Arabic HTML                ASMO-708                       }
     FI_HTML_ARABIC_ASMO708 = 4094;     
  { Arabic HTML                DOS OEM 720 TRANSPARENT ASMO   }
     FI_HTML_ARABIC_DOS = 4095;     
  { Arabic HTML                ISO 8859-6                     }
     FI_HTML_ARABIC_ISO = 4096;     
  { Arabic HTML                Mac                            }
     FI_HTML_ARABIC_MAC = 4097;     
  { Arabic HTML                Windows ANSI 1256              }
     FI_HTML_ARABIC_WINDOWS = 4098;     
  { Baltic HTML                ISO 8859-4                     }
     FI_HTML_BALTIC_ISO = 4099;     
  { Baltic HTML                Windows ANSI 1257              }
     FI_HTML_BALTIC_WINDOWS = 4100;     
  { Central European HTML      DOS OEM 852 Latin II           }
     FI_HTML_CENTRALEUROPEAN_DOS = 4101;     
  { Central European HTML      ISO 8859-2                     }
     FI_HTML_CENTRALEUROPEAN_ISO = 4102;     
  { Central European HTML      Mac                            }
     FI_HTML_CENTRALEUROPEAN_MAC = 4103;     
  { Central European HTML      Windows ANSI 1250              }
     FI_HTML_CENTRALEUROPEAN_WINDOWS = 4104;     
  { Chinese Simplified HTML    EUC                            }
     FI_HTML_CHINESESIMPLIFIED_EUC = 4105;     
  { Chinese Simplified HTML    Windows ANSI 936 (GB2312)      }
     FI_HTML_CHINESESIMPLIFIED_WINDOWS = 4106;     
  { Chinese Traditional HTML   Windows ANSI 950 (BIG5)        }
     FI_HTML_CHINESETRADITIONAL_WINDOWS = 4107;     
  { Cyrillic HTML              DOS OEM 855                    }
     FI_HTML_CYRILLIC_DOS = 4108;     
  { Cyrillic HTML              ISO 8859-5                     }
     FI_HTML_CYRILLIC_ISO = 4109;     
  { Cyrillic HTML              KOI8-R                         }
     FI_HTML_CYRILLIC_KOI8R = 4110;     
  { Cyrillic HTML              Mac                            }
     FI_HTML_CYRILLIC_MAC = 4111;     
  { Cyrillic HTML              Windows ANSI 1251              }
     FI_HTML_CYRILLIC_WINDOWS = 4112;     
  { Greek HTML                 ISO 8859-7                     }
     FI_HTML_GREEK_ISO = 4113;     
  { Greek HTML                 Mac                            }
     FI_HTML_GREEK_MAC = 4114;     
  { Greek HTML                 Windows ANSI 1253              }
     FI_HTML_GREEK_WINDOWS = 4115;     
  { Hebrew HTML                DOS OEM 862                    }
     FI_HTML_HEBREW_DOS = 4116;     
  { Hebrew HTML                ISO 8859-8                     }
     FI_HTML_HEBREW_ISO_VISUAL = 4117;     
  { Hebrew HTML                Windows ANSI 1255              }
     FI_HTML_HEBREW_WINDOWS = 4118;     
  { Japanese HTML              Mac                            }
     FI_HTML_JAPANESE_MAC = 4119;     
  { Japanese HTML              Windows Shift-JIS ANSI 932     }
     FI_HTML_JAPANESE_SHIFTJIS = 4120;     
  { Korean HTML                Windows ANSI 1361 (Johab)      }
     FI_HTML_KOREAN_JOHAB = 4121;     
  { Korean HTML                Windows ANSI 949               }
     FI_HTML_KOREAN_WINDOWS = 4122;     
  { Russian HTML               DOS OEM 866                    }
     FI_HTML_RUSSIAN_DOS = 4123;     
  { Thai HTML                  Windows ANSI 874               }
     FI_HTML_THAI_WINDOWS = 4124;     
  { Turkish HTML               DOS OEM 857                    }
     FI_HTML_TURKISH_DOS = 4125;     
  { Turkish HTML               ISO 8859-9                     }
     FI_HTML_TURKISH_ISO = 4126;     
  { Turkish HTML               Mac                            }
     FI_HTML_TURKISH_MAC = 4127;     
  { Turkish HTML               Windows ANSI 1254              }
     FI_HTML_TURKISH_WINDOWS = 4128;     
  { Vietnamese HTML            Windows ANSI 1258              }
     FI_HTML_VIETNAMESE_WINDOWS = 4129;     
  { Western European HTML      ISO 8859-1                     }
     FI_HTML_WESTERNEUROPEAN_ISO = 4130;     
  { Western European HTML      Mac                            }
     FI_HTML_WESTERNEUROPEAN_MAC = 4131;     
  { Western European HTML      Windows ANSI 1252              }
     FI_HTML_WESTERNEUROPEAN_WINDOWS = 4132;     
     FI_GENERICEND = 4132;     
     FI_PLUGIN = 4750;     
  { for backwards compatibility   }
     FI_JAPANESE_SHIFTJIS = FI_SHIFTJIS;     
  {
      |   Bitmap/Vector formats stored internally by applications
       }
     FI_BITMAPBEGIN = 5000;     
  { Word for Windows internal metafile  }
     FI_BINARYMETAFILE = 5000;     
  { WordPerfect internal WPG, no header  }
     FI_WPFWPG = 5001;     
  { Ami internal snap shot  }
     FI_AMISNAPSHOT = 5002;     
  { Word internal snap shoot  }
     FI_WORDSNAPSHOT = 5003;     
  { Macintosh PICT without 512 byte header  }
     FI_BINARYMACPICT = 5004;     
  { Word for Windows internal metafile bitmap  }
     FI_BINARYMETABMP = 5005;     
  { Word for Windows 6 internal metafile  WITH metfilepict header  }
     FI_BINARYMETAPICT = 5006;     
  { PerfectWorks internal embedding  }
     FI_WPFWORKSEMBED = 5007;     
  { Bitmap embedded in a WPG2 file  }
     FI_WPG2EMBED = 5008;     
  { Bitmap w/o BITMAPFILEHEADER in WKS  }
     FI_WINDOWSDIB = 5009;     
  { Bitmap embedded in a WPG1 file  }
     FI_WPG1EMBED = 5010;     
  { Bitmap embedded in another format handled by GDSF  }
     FI_GDSFEMBED = 5011;     
  { Bitmap embedded in Excel with just BITMAPCOREINFO as a header  }
     FI_WINBMPCOREINFO = 5012;     
  { Black & White Bitmap embedded in Interleaf  }
     FI_IAFBWEMBED = 5013;     
  { Color Bitmap embedded in Interleaf  }
     FI_IAFCOLOREMBED = 5014;     
  { Bitmap embedded in a PICT file  }
     FI_PICTEMBED = 5015;     
     FI_BITMAPEND = 5015;     
  { Export OCR data as Text, no formatting }
     FI_OCRTEXT = 5100;     
  { Export OCR data as RTF, yes formatting }
     FI_OCRRTF = 5101;     
  { Export OCR data as HTML. }
     FI_OCRHTML = 5102;     
     FI_IDEND = 5102;     
  { EDRM export  }
     FI_EDRM1 = 5200;     
  {
  	|  OI Interface formats
  	 }
     FI_OIFACEBEGIN = 6000;     
  { iface/OIActiveComponent.h  }
     FI_OIACTIVECOMPONENT = 6000;     
  { iface/OIDocument.h  }
     FI_OIDOCUMENT = 6001;     
  { iface/OIVect.h  }
     FI_OIVECT = 6002;     
  { iface/OISimpleVect.h  }
     FI_OISIMPLEVECT = 6003;     
  { iface/OIVect3D.h  }
     FI_OIVECT3D = 6004;     
  { iface/OIText.h  }
     FI_OITEXT = 6005;     
  { iface/OIChart.h  }
     FI_OICHART = 6006;     
  { iface/OISmartArt.h  }
     FI_OISMARTART = 6007;     
  { iface/OIChunkerInfo.h  }
     FI_OICHUNKERINFO = 6008;     
  { iface/OIVectorHotspots.h  }
     FI_OIVECTORHOTSPOTS = 6009;     
  { iface/OIChunker.h  }
     FI_OICHUNKER = 6010;     
  { iface/OIFilter.h  }
     FI_OIFILTER = 6011;     
     FI_OIFACEEND = 6009;     
  {
      |
      |   Entry points
      |
       }

  type
     PFIGET = ^FIGET;
     FIGET = record
       wId : VTWORD;
     end;
     PPFIGET = ^PFIGET;

  const
     FIFLAG_NORMAL = 0;     
     FIFLAG_EXTENDEDFI = 1;     
     FIFLAG_OVERRIDEOPTIONS = 2;     

  function FIIdFileEx(
    _para1:VTDWORD;
    _para2:PVTVOID;
    _para3:VTDWORD;
    _para4:PVTWORD;
    _para5:VTLPTSTR;
    _para6:VTWORD
  ):VTWORD; cdecl;external External_library name 'FIIdFileEx';
  function FIGetFirstId(_para1:PFIGET; _para2:PVTWORD; _para3:VTLPTSTR; _para4:VTWORD):VTBOOL;cdecl;external External_library name 'FIGetFirstId';
  function FIGetNextId(_para1:PFIGET; _para2:PVTWORD; _para3:VTLPTSTR; _para4:VTWORD):VTBOOL;cdecl;external External_library name 'FIGetNextId';
  function FIGetIDString(_para1:VTWORD; _para2:VTLPTSTR; _para3:VTWORD):VTWORD;cdecl;external External_library name 'FIGetIDString';
  function FIIdSpecial(_para1:HIOFILE; _para2:VTWORD):VTWORD;cdecl;external External_library name 'FIIdSpecial';
  function FIIdFile(_para1:VTDWORD; _para2:PVTVOID; _para3:VTDWORD; _para4:PVTWORD):VTWORD;cdecl;external External_library name 'FIIdFile';
  function FIIdHandle(_para1:HIOFILE; _para2:VTDWORD; _para3:PVTWORD):VTSHORT;cdecl;external External_library name 'FIIdHandle';
//{$ifdef UNIX_PTHREAD}
//  function FIThreadInit(ThreadOption:VTSHORT):VTLONG;cdecl;external External_library name 'FIThreadInit';
//  function FIThreadInitExt(Lock:function (_para1:PVTVOID):VTLONG; Unlock:function (_para1:PVTVOID):VTLONG):VTLONG;cdecl;external External_library name 'FIThreadInitExt';
//{$endif}
  function FIInit:VTDWORD;cdecl;external External_library name 'FIInit';
  function FIDeInit:VTDWORD;cdecl;external External_library name 'FIDeInit';

//  { defines for thread initialization.  Needed only for UNIX  }
//
//  const
//     FITHREAD_INIT_PTHREADS = 0;
//     FITHREAD_INIT_NOTHREADS = 1;
//     FITHREAD_INIT_NATIVETHREADS = 2;
//     FITHREAD_INIT_SUCCESS = 0;
//     FITHREAD_INIT_FAILED = 1;
//     FITHREAD_INIT_ALREADY_CALLED = 2;

implementation

end.
